--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "jsx-view-engine": "^0.1.0"
+    "jsx-view-engine": "^0.1.0",
+    "method-override": "^3.0.0",
+    "mongoose": "^6.7.0"
   }
 }
